--- a/src/estilos/styles.scss
+++ b/src/estilos/styles.scss
@@ -6,3 +6,9 @@ $warning: #ffc107;
 $danger: #e44c55;
 $light: #44d9e8;
 $dark: #170229;
+$dark2:#30115e;
+
+$titleSizeMobile: 34px;
+$titleSizeDesktop:48px;
+
+
