validacion de input vacios en el form funcionando

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -27,6 +27,9 @@
   font-size: $titleSizeMobile;
 }
 
+.error {
+  display:none;
+}
 
 .btn {
   letter-spacing: 2px;
@@ -59,3 +62,5 @@
         width: 40%;
     }
 }
+
+
